[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Bison skeleton for Rust"
edition = "2018"
license = "MIT"
name = "rust-bison-skeleton"
repository = "https://github.com/iliabylich/rust-bison-skeleton"
version = "0.28.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
