[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Bison skeleton for Rust"
edition = "2018"
include = ["bison/*.m4", "src/lib.rs", "Cargo.toml", "README.md"]
keywords = ["parser", "LR", "yacc", "bison", "grammar"]
license = "MIT"
name = "rust-bison-skeleton"
repository = "https://github.com/iliabylich/rust-bison-skeleton"
version = "0.41.0"

[lib]
doctest = false
