[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
name = "rust-bison-skeleton-tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.rust-bison-skeleton]
path = "../rust-bison-skeleton"

[dev-dependencies]
jemallocator = "0.3.2"
pprof = {version = "0.5", features = ["flamegraph"]}
